--- a/index.html
+++ b/index.html
@@ -66,6 +66,56 @@
           </div>
 
         </div>
+		
+		<div class="row boxes">
+
+          <div class="col-lg-6">
+            <div class="card text-center">
+              <img class="card-img-top" src="./files/new-years.png" alt="Project">
+              <div class="card-body">
+                <h3 class="card-title"><a href="#">New Years Website</a></h3>
+                <p>My theme/objectives for the year!</p>
+                <a href="https://newyears.vtr.pt" class="btn btn-dark">Visit</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card text-center">
+              <img class="card-img-top" src="./files/social-hub.png" alt="Project">
+              <div class="card-body">
+				<h3 class="card-title"><a href="#">Social Hub</a></h3>
+                <p>Hub for all my social links/connections</p>
+                <a href="https://social.vtr.pt" class="btn btn-dark">Visit</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+		
+		<div class="row boxes">
+
+          <div class="col-lg-6">
+            <div class="card text-center">
+              <img class="card-img-top" src="./files/status.jpg" alt="Project">
+              <div class="card-body">
+                <h3 class="card-title"><a href="#">Status Page</a></h3>
+                <p>Portal for the status of any of my WebApps or projects.</p>
+                <a href="https://status.vtr.pt" class="btn btn-dark">Visit</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card text-center">
+              <img class="card-img-top" src="./files/apps.png" alt="Project">
+              <div class="card-body">
+				<h3 class="card-title"><a href="#">App Listing Page</a></h3>
+                <p>The page you are on!</p>
+                <a href="#" class="btn btn-dark">Visit</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
 	  
       </div>
   </main>
