--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <img class="card-img-top" src="./files/social-hub.png" alt="Project">
               <div class="card-body">
 				<h3 class="card-title"><a href="#">Social Hub</a></h3>
-                <p>Hub for all my social links/connections</p>
+                <p>Hub for all my social links/connections.</p>
                 <a href="https://social.vtr.pt" class="btn btn-dark">Visit</a>
               </div>
             </div>
@@ -96,7 +96,7 @@
 
           <div class="col-lg-6">
             <div class="card text-center">
-              <img class="card-img-top" src="./files/status.jpg" alt="Project">
+              <img class="card-img-top" src="./files/status.png" alt="Project">
               <div class="card-body">
                 <h3 class="card-title"><a href="#">Status Page</a></h3>
                 <p>Portal for the status of any of my WebApps or projects.</p>
