--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
 
           <div class="col-lg-6">
             <div class="card text-center">
-              <img class="card-img-top" src="./files/new-years.png" alt="Project">
+              <img class="card-img-top" src="./files/presentations.png" alt="Project">
               <div class="card-body">
-                <h3 class="card-title"><a href="#">New Years Website</a></h3>
-                <p>My theme/objectives for the year!</p>
-                <a href="https://newyears.vtr.pt" class="btn btn-dark">Visit</a>
+                <h3 class="card-title"><a href="#">Presentations Portal</a></h3>
+                <p>A portal with all my public presentations!</p>
+                <a href="https://presentations.vtr.pt" class="btn btn-dark">Visit</a>
               </div>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="card text-center">
-              <img class="card-img-top" src="./files/social-hub.png" alt="Project">
+              <img class="card-img-top" src="./files/countdowns.png" alt="Project">
               <div class="card-body">
-				<h3 class="card-title"><a href="#">Social Hub</a></h3>
-                <p>Hub for all my social links/connections.</p>
-                <a href="https://social.vtr.pt" class="btn btn-dark">Visit</a>
+				<h3 class="card-title"><a href="#">Countdowns Portal</a></h3>
+                <p>Portal with random countdowns I have!</p>
+                <a href="https://countdowns.vtr.pt" class="btn btn-dark">Visit</a>
               </div>
             </div>
           </div>
